--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">Saya Edi Yulianto</h1>
+            <h1 class="responsive-headline">"I'am Edi Yulianto</h1>
             <h3>Berselancar dalam dunia <span>software engineer</span>, <span>web developer</span> maupun <span>fullstack developer</span>.
-               <br/>Let's <a class="smoothscroll" href="#about">start scrolling</a>
-            and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
+            </br>Ingin tau lebih lanjut. <a class="smoothscroll" href="#about">Silahkan scroll kebawah</a></h3>
             <hr />
             <ul class="social">
                <li><a href="https://github.com/edyulianto"><i class="fa fa-github"></i></a></li>
