--- a/index.html
+++ b/index.html
@@ -54,18 +54,13 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">"I'am Edi Yulianto</h1>
+            <h1 class="responsive-headline">I'am Edi Yulianto</h1>
             <h3>Berselancar dalam dunia <span>software engineer</span>, <span>web developer</span> maupun <span>fullstack developer</span>.
             </br>Ingin tau lebih lanjut. <a class="smoothscroll" href="#about">Silahkan scroll kebawah</a></h3>
             <hr />
             <ul class="social">
                <li><a href="https://github.com/edyulianto"><i class="fa fa-github"></i></a></li>
-               <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
-               <!-- <li><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
                <li><a href="https://www.linkedin.com/in/ediyulianto/"><i class="fa fa-linkedin"></i></a></li>
-               <!-- <li><a href="#"><i class="fa fa-instagram"></i></a></li> -->
-               <!-- <li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
-               <!-- <li><a href="#"><i class="fa fa-skype"></i></a></li> -->
             </ul>
          </div>
       </div>
@@ -180,9 +175,11 @@
                   <p class="info">Software Engineer<span>&bull;</span> <em class="date">Maret 2017 - Present</em></p>
 
                   <p>
-                     <li>Mengembangakan Aplikasi Komersialisasi Penerimaan Migas (KPM) berbasis Java Web (JSF) dengan</li>
-                     <li>mengikuti code yang sudah terstandarisasi</li>
-                     <li>Melakukan ETL proses untuk kebutuhan Data Warehouse Pertamina</li>
+                     <ul>
+                        <li>Mengembangakan Aplikasi Komersialisasi Penerimaan Migas (KPM) berbasis Java Web (JSF) dengan</li>
+                        <li>mengikuti code yang sudah terstandarisasi</li>
+                        <li>Melakukan ETL proses untuk kebutuhan Data Warehouse Pertamina</li>
+                     </ul>
                   </p>
 
                </div>
@@ -197,8 +194,10 @@
                   <p class="info">Software Engineer<span>&bull;</span> <em class="date">Mei 2016 - Nov 2016</em></p>
 
                   <p>
-                     <li>Membangun Aplikasi Tactical Floor Game untuk Sekso TNI menggunakan Unity</li>
-                     <li>Melakukan penelitian terhadap teknologi game terbaru dan mengimplementasikan ke dalam pembanguan aplikasi</li>
+                     <ul>
+                        <li>Membangun Aplikasi Tactical Floor Game untuk Sekso TNI menggunakan Unity</li>
+                        <li>Melakukan penelitian terhadap teknologi game terbaru dan mengimplementasikan ke dalam pembanguan aplikasi</li>
+                     </ul>
                   </p>
 
                </div>
@@ -213,8 +212,10 @@
                   <p class="info">Junior Java Developer<span>&bull;</span> <em class="date">Feb 2015 - Feb 2016</em></p>
 
                   <p>
-                     <li>Membuat Aplikasi Workflow berbasis Java Web menggunakan Joget Workflow (BPM, Java EE & Jquery)</li>
-                     <li>Membuat Custom Plugin untuk kebutuhan Aplikasi Workflow</li>
+                     <ul>
+                        <li>Membuat Aplikasi Workflow berbasis Java Web menggunakan Joget Workflow (BPM, Java EE & Jquery)</li>
+                        <li>Membuat Custom Plugin untuk kebutuhan Aplikasi Workflow</li>
+                     </ul>
                   </p>
 
                </div>
@@ -495,13 +496,8 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://github.com/edyulianto"><i class="fa fa-github"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/ediyulianto/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
 
             <ul class="copyright">
